# mne-python-stubs

./: .gitignore  LICENSE.md  README.md  gen_type_stubs.py  gen_type_stubs_mne.py  gen_type_stubs_vscode.py  pyproject.toml
typings/mne/: __init__.pyi  __main__.pyi  _freesurfer.pyi  _ola.pyi  _version.pyi  annotations.pyi  baseline.pyi  bem.pyi  chpi.pyi  conftest.pyi  coreg.pyi  cov.pyi  cuda.pyi  defaults.pyi  dipole.pyi  epochs.pyi  event.pyi  evoked.pyi  filter.pyi  fixes.pyi  label.pyi  misc.pyi  morph.pyi  morph_map.pyi  parallel.pyi  proj.pyi  rank.pyi  source_estimate.pyi  surface.pyi  transforms.pyi
typings/mne/_fiff/: _digitization.pyi  compensator.pyi  constants.pyi  ctf_comp.pyi  matrix.pyi  meas_info.pyi  open.pyi  pick.pyi  proc_history.pyi  proj.pyi  reference.pyi  tag.pyi  tree.pyi  utils.pyi  what.pyi  write.pyi
typings/mne/beamformer/: __init__.pyi  _compute_beamformer.pyi  _dics.pyi  _lcmv.pyi  _rap_music.pyi  resolution_matrix.pyi
typings/mne/channels/: __init__.pyi  _dig_montage_utils.pyi  _standard_montage_utils.pyi  channels.pyi  interpolation.pyi  layout.pyi  montage.pyi
typings/mne/commands/: __init__.pyi  mne_anonymize.pyi  mne_bti2fiff.pyi  mne_clean_eog_ecg.pyi  mne_compute_proj_ecg.pyi  mne_compute_proj_eog.pyi  mne_flash_bem.pyi  mne_freeview_bem_surfaces.pyi  mne_kit2fiff.pyi  mne_make_scalp_surfaces.pyi  mne_prepare_bem_model.pyi  mne_report.pyi  mne_setup_forward_model.pyi  mne_setup_source_space.pyi  mne_surf2bem.pyi  mne_watershed_bem.pyi  mne_what.pyi  utils.pyi
typings/mne/datasets/: __init__.pyi  _fetch.pyi  config.pyi  utils.pyi
typings/mne/decoding/: __init__.pyi  base.pyi  csp.pyi  ems.pyi  mixin.pyi  receptive_field.pyi  search_light.pyi  ssd.pyi  time_delaying_ridge.pyi  time_frequency.pyi  transformer.pyi
typings/mne/export/: __init__.pyi  _edf.pyi  _egimff.pyi  _export.pyi
typings/mne/forward/: __init__.pyi  _compute_forward.pyi  _field_interpolation.pyi  _lead_dots.pyi  _make_forward.pyi  forward.pyi
typings/mne/gui/: __init__.pyi  _coreg.pyi  _gui.pyi
typings/mne/html_templates/: __init__.pyi  _templates.pyi
typings/mne/inverse_sparse/: __init__.pyi  _gamma_map.pyi  mxne_debiasing.pyi  mxne_inverse.pyi  mxne_optim.pyi
typings/mne/io/: __init__.pyi  _fiff_wrap.pyi  _read_raw.pyi  base.pyi  constants.pyi  meas_info.pyi  pick.pyi
typings/mne/minimum_norm/: __init__.pyi  _eloreta.pyi  inverse.pyi  resolution_matrix.pyi  spatial_resolution.pyi  time_frequency.pyi
typings/mne/preprocessing/: __init__.pyi  _annotate_amplitude.pyi  _annotate_nan.pyi  _csd.pyi  (+19 more)
(+224 files in other folders)
