[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "types-mne"
version = "1.6.0-20231125"
description = "Type stubs with docstrings for MNE-Python."
authors = [
    { name = "Richard Höchenberger", email = "richard.hoechenberger@gmail.com" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = ["Typing :: Stubs Only"]
dependencies = ["mne>=1.6.0,<=1.7.0"]

[project.optional-dependencies]
dev = ["mne[full]", "mypy>=1.7.0,<=1.8.0", "black==23.10.1", "ruff==0.1.6"]

[tool.hatch.build]
include = ["typings/mne/**/*.pyi", "typings/mne/py.typed"]

# Once a wheel is being built, we move the package contents from
# typings/mne to mne-stubs, which will be deployed to site-packages/
[tool.hatch.build.targets.wheel.sources]
"typings/mne" = "mne-stubs"
