[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "types-mne"
description = "Type stubs with docstrings for MNE-Python."
authors = [
    { name = "Richard Höchenberger", email = "richard.hoechenberger@gmail.com" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = ["Typing :: Stubs Only"]
requires-python = ">=3.11"
dependencies = ["mne==1.7.*"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "mne[full,dev,test_extra]",
    "mypy>=1.7.0,<1.8.0",
    "stubdefaulter==0.1.0",
    "ruff==0.1.6",
]

[tool.hatch.build]
include = ["typings/mne/**/*.pyi", "typings/mne/py.typed"]

# Once a wheel is being built, we move the package contents from
# typings/mne to mne-stubs, which will be deployed to site-packages/
[tool.hatch.build.targets.wheel.sources]
"typings/mne" = "mne-stubs"

[tool.hatch.version]
source = "vcs"
